[gd_scene load_steps=22 format=3 uid="uid://dfb4rwwclj67n"]

[ext_resource type="Script" path="res://enemy_1.gd" id="1_vj41x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_krurq"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_y8exn"]
material = SubResource("StandardMaterial3D_krurq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8fvls"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_5c06j"]
material = SubResource("StandardMaterial3D_8fvls")

[sub_resource type="BoxShape3D" id="BoxShape3D_26y0v"]
size = Vector3(1, 0.541992, 1.52301)

[sub_resource type="BoxShape3D" id="BoxShape3D_ujxvg"]
size = Vector3(8.63614, 1.56989, 6.1817)

[sub_resource type="BoxShape3D" id="BoxShape3D_63sih"]
size = Vector3(1.93329, 1.06067, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wnby4"]
size = Vector3(1.63861, 1, 1.50446)

[sub_resource type="Animation" id="Animation_bmp8e"]
length = 4.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Leg 1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1.03333, 1, 0, 0.473622, 0, 1.96667, 1, 0, -0.0572609, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Leg 2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(1.96667, 1, 0.839012, 0.164644, -0.383986, 3, 1, 0.839012, 0.713705, -0.383986, 4, 1, 0.839012, 0.228383, -0.383986)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/Leg 3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(1, 1, 0, 0, 0, 1.96667, 1, 0, 0.423592, 0, 3, 1, 0, 0.0397425, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D/Leg 4")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(1, 1, 0, 0, 0, 1.96667, 1, 0, 0.423592, 0, 3, 1, 0, 0.0397425, 0)
tracks/4/type = "position_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeshInstance3D/Leg 5")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(1.96667, 1, 0, 0, 0, 3, 1, 0, 0.549061, 0, 4, 1, 0, 0.0175283, 0)
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MeshInstance3D/Leg 6")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0.0333333, 1, 0, 0.429604, 0, 1, 1, 0, 0.903226, 0, 1.96667, 1, 0, 0.372343, 0)

[sub_resource type="Animation" id="Animation_ntslr"]
resource_name = "Walk"
length = 3.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Leg 1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.266667, 1, 0, 0, 0, 0.833333, 1, 0, 0.386, 0, 2.03333, 1, 0, 0.386, 0, 3, 1, 0, 0.0832362, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Leg 6")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.0333333, 1, 0, 0.476236, 0, 0.966667, 1, 0, 0.888803, 0, 2.03333, 1, 0, 0.888803, 0, 2.96667, 1, 0, 0.532516, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/Leg 2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0.0333333, 1, 0.839012, 0.164644, -0.383986)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D/Leg 4")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array()

[sub_resource type="Animation" id="Animation_1vnrx"]
resource_name = "Walk2"
length = 4.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Leg 1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1.03333, 1, 0, 0.473622, 0, 1.96667, 1, 0, -0.0572609, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Leg 2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(1.96667, 1, 0.839012, 0.164644, -0.383986, 3, 1, 0.839012, 0.713705, -0.383986, 4, 1, 0.839012, 0.228383, -0.383986)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/Leg 3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(1, 1, 0, 0, 0, 1.96667, 1, 0, 0.423592, 0, 3, 1, 0, 0.0397425, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D/Leg 4")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(1, 1, 0, 0, 0, 1.96667, 1, 0, 0.423592, 0, 3, 1, 0, 0.0397425, 0)
tracks/4/type = "position_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeshInstance3D/Leg 5")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(1.96667, 1, 0, 0, 0, 3, 1, 0, 0.549061, 0, 4, 1, 0, 0.0175283, 0)
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MeshInstance3D/Leg 6")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0.0333333, 1, 0, 0.429604, 0, 1, 1, 0, 0.903226, 0, 1.96667, 1, 0, 0.372343, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dey7"]
_data = {
"RESET": SubResource("Animation_bmp8e"),
"Walk": SubResource("Animation_ntslr"),
"Walk2": SubResource("Animation_1vnrx")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_buyeu"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_y36r3"]
material = SubResource("StandardMaterial3D_buyeu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mit13"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_d76ov"]
material = SubResource("StandardMaterial3D_mit13")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b518d"]
albedo_color = Color(31.721, 23.387, 0.033, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3lbmv"]
material = SubResource("StandardMaterial3D_b518d")

[sub_resource type="BoxShape3D" id="BoxShape3D_2nhqe"]
size = Vector3(0.343018, 1.51868, 0.289062)

[sub_resource type="BoxShape3D" id="BoxShape3D_yoiyl"]
size = Vector3(0.642334, 0.248962, 0.664551)

[node name="enemy_1" type="CharacterBody3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_vj41x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.556448, 0, 0, 0, 1.52621, 0, 0, 0)
mesh = SubResource("BoxMesh_y8exn")

[node name="Leg 1" type="Node3D" parent="MeshInstance3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/Leg 1"]
transform = Transform3D(-1.08051, 0.22283, 0, -1.44198, -0.166971, 0, 0, 0, 0.0577283, 0.839012, 0.164644, 0.422621)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D/Leg 1"]
transform = Transform3D(-0.789076, -0.250328, 0, 1.61993, -0.121936, 0, 0, 0, 0.0577283, 1.67294, 0.19468, 0.422621)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="Leg 6" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, 0, 0, 1, 0, 0.429604, 0)

[node name="MeshInstance3D9" type="MeshInstance3D" parent="MeshInstance3D/Leg 6"]
transform = Transform3D(1.08051, -0.22283, -5.04677e-09, -1.44198, -0.166971, 0, -9.4461e-08, 1.94804e-08, -0.0577283, -0.956084, -0.221356, -0.386858)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="MeshInstance3D/Leg 6"]
transform = Transform3D(0.789077, 0.250328, -5.04677e-09, 1.61993, -0.121936, 0, -6.89832e-08, -2.18844e-08, -0.0577283, -1.79002, -0.19132, -0.386858)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="Leg 2" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(-1.08051, 0.22283, -8.88178e-16, -1.44198, -0.166971, 0, 1.42109e-14, 1.77636e-15, 0.0577283, 0.839012, 0.164644, -0.383986)

[node name="MeshInstance3D7" type="MeshInstance3D" parent="MeshInstance3D/Leg 2"]
transform = Transform3D(0.280833, 0.148311, 1.67952e-09, 6.2108, -0.280833, -1.45045e-08, -1.6363e-06, 3.3745e-07, -1, 0.597391, -5.15913, 13.9725)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="MeshInstance3D/Leg 2"]
transform = Transform3D(-0.982046, -0.0291522, 1.67952e-09, -1.22081, 0.982044, -1.45045e-08, -1.19496e-06, -3.79093e-07, -1, 0.861577, -7.62056, 13.9725)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="Leg 3" type="Node3D" parent="MeshInstance3D"]

[node name="MeshInstance3D5" type="MeshInstance3D" parent="MeshInstance3D/Leg 3"]
transform = Transform3D(-1.08051, 0.22283, 0, -1.44198, -0.166971, 0, 7.10543e-15, 8.88178e-16, 0.0577283, 0.839012, 0.164644, -0.00400849)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="MeshInstance3D/Leg 3"]
transform = Transform3D(-0.789076, -0.250328, 0, 1.61993, -0.121936, 0, 0, -8.88178e-16, 0.0577283, 1.67294, 0.19468, -0.00400849)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="Leg 4" type="Node3D" parent="MeshInstance3D"]

[node name="MeshInstance3D11" type="MeshInstance3D" parent="MeshInstance3D/Leg 4"]
transform = Transform3D(1.08051, -0.22283, -5.04677e-09, -1.44198, -0.166971, 0, -9.4461e-08, 1.94804e-08, -0.0577283, -0.956084, 0.164644, -0.000133486)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="MeshInstance3D/Leg 4"]
transform = Transform3D(0.789077, 0.250328, -5.04677e-09, 1.61993, -0.121936, 0, -6.89832e-08, -2.18844e-08, -0.0577283, -1.79002, 0.19468, -0.000133408)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="Leg 5" type="Node3D" parent="MeshInstance3D"]

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D/Leg 5"]
transform = Transform3D(-1.08051, 0.22283, 0, -1.44198, -0.166971, 0, 7.10543e-15, 8.88178e-16, 0.0577283, 0.839012, 0.164644, -0.383986)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="MeshInstance3D/Leg 5"]
transform = Transform3D(-0.789076, -0.250328, 0, 1.61993, -0.121936, 0, 0, -8.88178e-16, 0.0577283, 1.67294, 0.19468, -0.383986)
mesh = SubResource("BoxMesh_5c06j")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.012207, -0.000640869)
shape = SubResource("BoxShape3D_26y0v")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.25877, 0, 0, 0, 1.43204, 0, 0, 0, 1.89759, 0.766816, 0.678732, -0.487265)
shape = SubResource("BoxShape3D_ujxvg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.928714, 0, 0, 0, 0.928714, 0, 0, 0, 1.42522, -1.40919, 0, 0)
shape = SubResource("BoxShape3D_63sih")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32044, 0.00250864, 0.0176847)
shape = SubResource("BoxShape3D_wnby4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dey7")
}

[node name="head and neck" type="Node3D" parent="."]
transform = Transform3D(-0.59807, 2.48276e-08, 6.73296e-09, 0, 0.0196976, -0.147605, -5.22849e-08, -0.283994, -0.0770161, -3.05733e-07, 1.19364, -1.81733)

[node name="MeshInstance3D13" type="MeshInstance3D" parent="head and neck"]
transform = Transform3D(0.619145, 2.13163e-14, 3.55271e-15, 7.10543e-15, 3.06442, 1.06541, 2.66454e-15, -3.0157, 0.532738, -2.84217e-14, -3.29804, 3.11131)
mesh = SubResource("CylinderMesh_y36r3")
skeleton = NodePath("../../MeshInstance3D")

[node name="MeshInstance3D14" type="MeshInstance3D" parent="head and neck"]
transform = Transform3D(1, 3.55271e-15, 1.77636e-15, 0, 1, 0, 3.55271e-15, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_d76ov")
skeleton = NodePath("../../MeshInstance3D")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="head and neck"]
transform = Transform3D(0.0792444, 2.22045e-16, 0, 8.88178e-16, 0.0628008, -0.0316683, 2.22045e-16, -0.0328509, 0.504403, 0, 1.05526, 0.00142479)
mesh = SubResource("CylinderMesh_3lbmv")
skeleton = NodePath("../..")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.999901, 0.000762922, -0.0140542, 0.0109463, 0.669839, -0.742426, 0.00884762, -0.742506, -0.669781, 0.00520186, 0.680316, -1.17581)
shape = SubResource("BoxShape3D_2nhqe")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 5.2108e-15, 8.74228e-08, -1.96105e-15, 1, 0, -8.74228e-08, 5.96046e-08, -1, 0.0146227, 1.19636, -1.85454)
shape = SubResource("BoxShape3D_yoiyl")

[connection signal="body_entered" from="Area3D" to="." method="_on_Area3D_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_Area3D_body_exited"]
